--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,13 +24,15 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 //    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.parse:parse-android:1.10.0'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
     androidTestCompile 'com.android.support.test:runner:0.4.1'
     androidTestCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support:support-annotations:23.1.1'
     androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.1'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.parse:parse-android:1.10.0'
+    compile 'com.android.support:design:23.1.1'
 }
+
 
 
