Add extra toast on signup activity. Modified generic messages slightly.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.parse:parse-android:1.10.0'
     compile 'com.android.support:design:23.1.1'
+    testCompile 'junit:junit:4.12'
 }
 
 
