--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,13 +26,16 @@ dependencies {
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
     androidTestCompile 'com.android.support.test:runner:0.4.1'
     androidTestCompile 'junit:junit:4.12'
-    androidTestCompile 'com.android.support:support-annotations:23.1.1'
+    androidTestCompile 'com.android.support:support-annotations:23.2.1'
     androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.1'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.parse:parse-android:1.10.0'
-    compile 'com.android.support:design:23.1.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.parse:parse-android:1.10.0'
+    compile 'com.android.support:design:23.2.1'
+    compile 'com.android.support:support-v4:23.2.1'
+    compile 'com.android.support:recyclerview-v7:23.2.1'
 }
+
 
 
 
