--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name="com.example.commet.booker.ParseInitialize">
         <meta-data
             android:name="com.parse.APPLICATION_ID"
             android:value="yjTOPXcNIDTsswA3RQ4P8CAm797ykDhI30T57h7E" />
