--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,12 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
+        android:name=".ParseInitialize"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name="com.example.commet.booker.ParseInitialize">
+        android:theme="@style/AppTheme">
         <meta-data
             android:name="com.parse.APPLICATION_ID"
             android:value="yjTOPXcNIDTsswA3RQ4P8CAm797ykDhI30T57h7E" />
@@ -78,6 +78,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.commet.booker.UserProfile" />
         </activity>
+        <activity
+            android:name=".ListAdapter"
+            android:label="@string/title_activity_list_adapter"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
