--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,10 @@ android {
     }
 }
 
+repositories {
+    jcenter()
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
@@ -29,6 +33,8 @@ dependencies {
     androidTestCompile 'com.android.support:support-annotations:23.2.1'
     androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
+    compile 'com.google.zxing:core:3.2.1'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.parse:parse-android:1.10.0'
     compile 'com.android.support:design:23.2.1'
