--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,12 +36,12 @@ dependencies {
     compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
     compile 'com.google.zxing:core:3.2.1'
     compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.parse:parse-android:1.10.0'
+//    compile 'com.parse:parse-android:1.10.0'
     compile 'com.android.support:design:23.2.1'
     compile 'com.android.support:support-v4:23.2.1'
     compile 'com.android.support:recyclerview-v7:23.2.1'
     compile 'com.parse.bolts:bolts-android:1.+'
-    compile 'com.parse:parse-android:1.+'
+//    compile 'com.parse:parse-android:1.+'
 //    compile project(':ParseControl')
 
 }
